--- a/templates/blog/post.html.twig
+++ b/templates/blog/post.html.twig
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-    {% block body %}
-        {{ message }}
-    {% endblock %}
+{% extends "base.html.twig" %}
 
-    {% block javascripts %}
-        {{ encore_entry_script_tags('app') }}
-    {% endblock %}
-    </body>
-</html>
+{% block title %}
+    {{ post.title }}
+{% endblock %}
+
+{% block body %}
+    <p>ID {{ id }}</p>
+    <h3>{{ post.title | upper }}</h3>
+    <p>{{ post.text }}</p>
+    <p>{{ post.date | date('d:m:Y H:i:s') }}</p>
+    <p>{{ 6789 | price }}</p>
+    <p>The current locale is {{ locale }}</p>
+    <p>Env : {{ app.environment }}</p>
+    <p>User : {{ app.user }}</p>
+    <p>Request : {{ app.request }}</p>
+    <p>Session Started : {{ app.session.isStarted() }}</p>
+    <p>Debug : {{ app.debug }}</p>
+{% endblock %}
