--- a/templates/blog/post.html.twig
+++ b/templates/blog/post.html.twig
@@ -13,7 +13,9 @@
     <p>The current locale is {{ locale }}</p>
     <p>Env : {{ app.environment }}</p>
     <p>User : {{ app.user }}</p>
-    <p>Request : {{ app.request }}</p>
+    <p>Request : <pre>{{ app.request }}</pre></p>
     <p>Session Started : {{ app.session.isStarted() }}</p>
     <p>Debug : {{ app.debug }}</p>
+
+    <div class="alert alert-danger">Test</div>
 {% endblock %}
